2007-08-03  Jie Zhang  <jie.zhang@analog.com>

	* Makefile (headers): Add cycle_count.h, cycle_count_bf.h,
	and xcycle_count.h

2007-08-02  Jie Zhang  <jie.zhang@analog.com>

	* Makefile (headers): Remove yvals.h.

2007-08-02  Jie Zhang  <jie.zhang@analog.com>

	* Makefile (headers): Remove ccblkfn.h. Add gcc.h.

2007-07-24  Jie Zhang  <jie.zhang@analog.com>

	* Makefile: Only install complex.h when libc doesn't have it.