@@ -1,3 +1,7 @@
+2008-04-18  Jie Zhang  <jie.zhang@analog.com>
+
+	* Makefile: Don't hard code compiler as bfin-elf-gcc.
+
 2007-08-03  Jie Zhang  <jie.zhang@analog.com>
 
 	* Makefile (headers): Add cycle_count.h, cycle_count_bf.h,
